--- a/src/assets/StyledMediaReceiver.css
+++ b/src/assets/StyledMediaReceiver.css
@@ -1,3 +1,3 @@
 .background {
-  background: center no-repeat url(LaunchScreen2048x1536.png);
+  background: center no-repeat url('./LaunchScreen2048x1536.png');
 }
