--- a/src/assets/StyledMediaReceiver.css
+++ b/src/assets/StyledMediaReceiver.css
@@ -1,7 +1,14 @@
-.background {
-  background: center no-repeat url('https://raw.githubusercontent.com/Techlis/TechlisSite/master/src/assets/LaunchScreen1024x768.png');
+<span style="font-family:arial,helvetica,sans-serif;"><span style="color:#000000;">.background {
+  background-color: rgb(155, 255, 100);
+}</span>
+.logo {
+  background-image: url('https://raw.githubusercontent.com/Techlis/TechlisSite/master/src/assets/LaunchScreen1024x768.png');
+}
+.progressBar {
+  background-color: rgb(155, 255, 100);
 }
 .splash {
   background-image: url('https://raw.githubusercontent.com/Techlis/TechlisSite/master/src/assets/LaunchScreen1024x768.png');
 }
-
+ 
+ </span>
