--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -29,19 +29,35 @@
 	);
 
 // Palette.
-	$palette: (
-		bg:					#242943,
-		bg-alt:				#2a2f4a,
+	// $palette: (
+	// 	bg:					#242943,
+	// 	bg-alt:				#2a2f4a,
+	// 	fg:					#ffffff,
+	// 	fg-bold:			#ffffff,
+	// 	fg-light:			rgba(244,244,255,0.2),
+	// 	border:				rgba(212,212,255,0.1),
+	// 	border-bg:			rgba(212,212,255,0.035),
+	// 	highlight:			#9bf1ff,
+	// 	accent1:			#6fc3df,
+	// 	accent2:			#8d82c4,
+	// 	accent3:			#ec8d81,
+	// 	accent4:			#e7b788,
+	// 	accent5:			#8ea9e8,
+	// 	accent6:			#87c5a4
+	// );
+  $palette: (
+		bg:					#111111,
+		bg-alt:				#191919,
 		fg:					#ffffff,
 		fg-bold:			#ffffff,
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#9bf1ff,
-		accent1:			#6fc3df,
-		accent2:			#8d82c4,
-		accent3:			#ec8d81,
-		accent4:			#e7b788,
-		accent5:			#8ea9e8,
-		accent6:			#87c5a4
+		highlight:			#373833,
+		accent1:			#222629,
+		accent2:			#474B4F,
+		accent3:			#6B6E70,
+		accent4:			#1F2605,
+		accent5:			#212221,
+		accent6:			#191919
 	);
